# gapminder-igno-survey-processing

./: .clasp.tpl.json  .gitignore  appsscript.json  deploy.sh  gsCombined.appsscript.json  package-lock.json  package.json  webpack.config.js
docs/: README.md
gsheets-addon/: DEV.md  appsscript.json  package-lock.json  package.json
gsheets-addon/docs/: README.md
gsheets-addon/docs/classes/: alreadyrunningexception.md  urlfetchappfetchexception.md
gsheets-addon/src/: index.ts
gsheets-addon/src/gsheetsData/: combinedQuestionsSheet.ts  combinedToplineSheet.ts  gsDashboardSurveyListingsSheet.ts  importedIgnoQuestionsInfoSheet.ts  surveysSheet.ts
gsheets-addon/src/lib/: answerOptionMatchesFactualAnswer.ts  chosenAnswerOptionIsThisManyAnswerOptionsAwayFromFactualAnswer.ts  errorHandlingFetch.ts  extractNumericalPartsOfAnswerOption.spec.ts  invokeGcpCloudFunction.ts  mutex.ts  parseSurveyName.spec.ts  parseSurveyName.ts  surveyIdFromGoogleSurveysUrl.spec.ts
gsheets-workflow-api/: .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  DEV.md  README.md  exploration-notebook.py  main.py  pyproject.toml  pytest.ini
gsheets-workflow-api/lib/: app_singleton.py  authorized_clients.py  config.py  find_by_attribute.py  find_in_list.py  survey_monkey.py
gsheets-workflow-api/lib/gdrive/: auth.py
gsheets-workflow-api/lib/gs_combined/: schemas.py  spreadsheet.py
gsheets-workflow-api/lib/gsheets/: gsheets_worksheet_data.py  gsheets_worksheet_editor.py  utils.py
gsheets-workflow-api/lib/import_mechanics/: import_gs_question_and_answer_rows.py  prepare_import_of_gs_question_and_answer_rows.py  refresh_surveys_and_combined_listings.py  utils.py
gsheets-workflow-api/lib/mapping/: abcify_question.py  auto_mark_correctness.py  choicify_question.py  convert_survey_details_to_gs_question_and_answer_rows.py  map_question_ids.py  summarize_gs_answer.py  summarize_gs_question.py  utils.py
gsheets-workflow-api/lib/parsing/: answer_option_matches_factual_answer.py  chosen_answer_option_distance.py  chosen_answer_option_is_this_many_answer_options_away_from_factual_answer.py  extract_numerical_parts_of_answer_option.py  key_normalizer_for_slightly_fuzzy_lookups.py  parse_survey_name.py
gsheets-workflow-api/lib/survey_monkey/: api_client.py  api_response_wrapper.py  question_rollup.py  response.py  survey.py
gsheets-workflow-api/notebooks/: exploration-notebook.py
gsheets-workflow-api/tests/: test_config.py  test_find_by_attribute.py  test_find_in_list.py  test_lib_import_statement.py
gsheets-workflow-api/tests/gdrive/: test_auth.py
gsheets-workflow-api/tests/gsheets/: test_gsheets_worksheet_data.py  test_gsheets_worksheet_editor.py
gsheets-workflow-api/tests/parsing/: test_answer_option_matches_factual_answer.py  test_chosen_answer_option_distance.py  test_chosen_answer_option_is_this_many_answer_options_away_from_factual_answer.py  test_extract_numerical_parts_of_answer_option.py  test_key_normalizer_for_slightly_fuzzy_lookups.py  test_parse_survey_name.py
src/: common.ts  index.ts  sdgQuestions.index.ts
src/gsheetsData/: combinedQuestionsSheet.ts  combinedToplineSheet.ts  gsDashboardSurveyListingsSheet.ts  hardcodedConstants.ts  importedIgnoQuestionsInfoSheet.ts  surveysSheet.ts
src/lib/: answerOptionMatchesFactualAnswer.spec.ts  answerOptionMatchesFactualAnswer.ts  chosenAnswerOptionIsThisManyAnswerOptionsAwayFromFactualAnswer.spec.ts  chosenAnswerOptionIsThisManyAnswerOptionsAwayFromFactualAnswer.ts  extractNumericalPartsOfAnswerOption.spec.ts  extractNumericalPartsOfAnswerOption.ts  keyNormalizerForSlightlyFuzzyLookups.ts  parseSurveyName.spec.ts  parseSurveyName.ts  surveyIdFromGoogleSurveysUrl.spec.ts  surveyIdFromGoogleSurveysUrl.ts
src/menuActions/: common.ts  menuDevUpdateFormulasAndCalculatedColumns.ts  menuExtractSurveyIdsFromCopyPastedLinkedSurveyNames.ts  menuRefreshCombinedToplineListing.ts  menuRefreshSurveysAndCombinedListings.ts  menuRefreshSurveysAndCombinedToplineListings.ts  refreshCombinedQuestionsSheetListing.ts  refreshCombinedToplineSheetListing.ts  refreshSurveysSheetListing.ts
(+3 files in other folders)
